Fixed li word wrap

--- a/public/style.css
+++ b/public/style.css
@@ -85,3 +85,7 @@ form button {
 	height: 500px;
 	overflow-y: auto;
 }
+
+li {
+	word-break: break-all;
+}
